5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1684_1879.log
== TEST (2019-04-28 18:43:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e=float(input("numero de horas extra: "))
f=float(input("numero de horas faltadas: "))
h=e(1/4*f)
print(e, "extras e", f ,"de faltas")

print(h)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    h=e(1/4*f)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:44:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e=float(input("numero de horas extra: "))
f=float(input("numero de horas faltadas: "))
h=e-(1/4*f)
print(e, "extras e", f ,"de faltas")

print(h)

-- OUTPUT:
420.0 extras e 20.0 de faltas
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:48:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e=float(input("numero de horas extra: "))
f=float(input("numero de horas faltadas: "))
h=e-(1/4*f)
print(e, "extras e", f ,"de falta")
if(h>400):
	print("R$ 500.0")
elif(h<=400):
	print("R$ 100.0")6

-- ERROR:
File "XXXX", line 9
    print("R$ 100.0")6
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:48:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e=float(input("numero de horas extra: "))
f=float(input("numero de horas faltadas: "))
h=e-(1/4*f)
print(e, "extras e", f ,"de falta")
if(h>400):
	print("R$ 500.0")
elif(h<=400):
	print("R$ 100.0")

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 18:49:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e=float(input("numero de horas extra: "))
f=float(input("numero de horas faltadas: "))
h=e-(1/4*f)
print(e, "extras e", f ,"de falta")
if(h>400):
	print("R$ 500.0")
elif(h<=400):
	print("R$ 100.0")

-- EXECUTION TIME:
0.13688
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
